<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <ImageView
            android:id="@+id/iv_bluetooth"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_blue_remote" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/iv_bluetooth"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    tools:text="Device Name" />

                <TextView
                    android:id="@+id/tv_extra_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textSize="12sp"
                    tools:text="Device Extra Data" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_mac"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    tools:text="Device Mac Address" />

                <TextView
                    android:id="@+id/tv_adv_interval"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textSize="12sp"
                    tools:text="1000ms" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_idle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:id="@+id/tv_rssi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginLeft="5dp"
                android:src="@mipmap/ic_rssi" />

            <Button
                android:id="@+id/btn_connect"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="@string/connect"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_connected"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:orientation="horizontal"
            tools:visibility="gone">

            <TextView
                android:id="@+id/tv_connected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connected"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_disconnect"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/disconnect"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_detail"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/enter"
                android:textSize="12sp" />

        </LinearLayout>
    </RelativeLayout>
</LinearLayout>